Add system wide checkbox 'Do not show this again' for duplicated check number request dialog

Includes QString -> QLatin1String refactoring as requested by Th. Baumgart.

FIXED-IN:4.8.1
BUG:360500
REVIEW:130241